# trame-slicer

./: .codespellrc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  noxfile.py  pyproject.toml  setup.cfg  slicer.py  tmp.xml
.github/workflows/: test_and_release.yml
bundles/desktop/: README.md
bundles/docker/: README.md
bundles/docker/scripts/: build_image.sh
bundles/docker/setup/: apps.yml
examples/: medical_viewer_app.py  requirements.txt  segmentation_app.py  segmentation_app_2.py
examples/widgets/: __init__.py  control_button.py  layout_button.py  load_client_volume_files_button.py  markups_button.py  segmentation_button.py  tools_strip.py  utils.py  volume_property_button.py  vr_preset_select.py  vr_shift_slider.py
slicer_trame/: .pre-commit-config.yaml  README.rst  __init__.py  __main__.py  setup.cfg
slicer_trame/app/: core.py
slicer_trame/bundles/desktop/: run.py
slicer_trame/bundles/docker/scripts/: run_image.sh
slicer_trame/bundles/docker/setup/: requirements.txt
slicer_trame/components/: layout_grid.py  rca_render_scheduler.py  rca_view_adapter.py  rca_view_factory.py  web_application.py
slicer_trame/core/: __init__.py  display_manager.py  io_manager.py  layout_manager.py  slicer_app.py  view_manager.py  volume_property.py  volume_rendering.py  volumes_reader.py
slicer_trame/rca_view/: __init__.py  rca_render_scheduler.py  rca_view_adapter.py  rca_view_factory.py  rendering_pool.py
slicer_trame/resources/: __init__.py  slicer_trame.css
slicer_trame/slicer/: __init__.py  abstract_view.py  display_manager.py  io_manager.py  layout_manager.py  slice_view.py  slicer_app.py  threed_view.py  view_layout_definition.py  view_manager.py  volume_rendering.py
slicer_trame/slicer_trame/: __init__.py
slicer_trame/slicer_trame/app/: abstract_view.py  core.py  main.py  slice_view.py  slicer_app.py  threed_view.py  timer.py
slicer_trame/slicer_trame/components/: layout_grid.py  rca_slicer_view_factory.py  rca_view_adapter.py  rca_view_factory.py  web_application.py
slicer_trame/slicer_trame/slicer/: __init__.py  abstract_view.py  display_manager.py  io_manager.py  layout_manager.py  render_scheduler.py  resources.py  slice_view.py  slicer_app.py  threed_view.py  view_factory.py  view_layout_definition.py  view_manager.py  volumes_reader.py  vtk_event_dispatcher.py
slicer_trame/tests/: conftest.py  manual_test_slicer.py  manual_test_slicer_2.py  test_abstract_view.py  test_display_manager.py  test_import.py  test_io_manager.py  test_layout_grid.py  test_layout_manager.py  test_segmentation.py  test_slice_view.py  test_threed_view.py  test_timer.py  test_trame_state.py  test_view_manager.py
slicer_trame/utils/: __init__.py  file_access.py
slicer_trame/views/: __init__.py  abstract_view.py  layout_grid.py  slice_view.py  threed_view.py  view_factory.py
tests/: conftest.py  direct_view_factory.py  requirements.txt  test_abstract_view.py  test_display_manager.py  test_event_dispatcher.py  test_io_manager.py  test_layout_grid.py  test_layout_manager.py  test_markups_node.py  test_medical_view_example.py  test_rca_render_sceduler.py  test_segment_modifier.py  test_segmentation.py  test_segmentation_display.py  test_segmentation_editor.py  test_segmentation_effects.py  test_segmentation_paint_effect.py  test_segmentation_scissors_effect.py  test_slice_view.py  test_threed_view.py  test_view_manager.py  test_volume_rendering.py  view_events.py
trame_slicer/: __init__.py
trame_slicer/core/: __init__.py  display_manager.py  io_manager.py  layout_manager.py  segmentation_editor.py  segmentation_manager.py  slicer_app.py  view_manager.py  volume_property.py  volume_rendering.py  volumes_reader.py
trame_slicer/rca_view/: __init__.py  rca_view_factory.py
trame_slicer/resources/: __init__.py
trame_slicer/resources/terminologies/: SegmentationCategoryTypeModifier-DICOM-Master.term.json  SegmentationCategoryTypeModifier-SlicerGeneralAnatomy.term.json
trame_slicer/segmentation/: __init__.py  segment_modifier.py  segment_paint_effect.py  segment_paint_effect2d.py  segment_paint_effect3d.py  segment_paint_widget.py  segment_paint_widget_2d.py  segment_paint_widget_3d.py  segment_properties.py  segment_region_mask.py  segment_scissor_effect.py  segment_scissor_widget.py  segmentation.py  segmentation_editor.py  segmentation_effect.py  segmentation_effects.py  segmentation_tools.py  segmentation_widget.py
trame_slicer/utils/: __init__.py  callback_undo_command.py  convert_colors.py  file_access.py  signal_to_state.py  singleton_meta.py  vtk_event_dispatcher.py  vtk_numpy.py
trame_slicer/views/: __init__.py  abstract_view.py  abstract_view_interactor.py  layout_grid.py  render_scheduler.py  slice_view.py  threed_view.py  threed_view_interaction_dispatch.py  trame_helper.py  view_factory.py  view_interaction_dispatch.py  view_layout.py  view_layout_definition.py
