[metadata]
name = slicer_trame
version = 1.0.0
description = Slicer based Trame application
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Kitware SAS
license = Apache Software License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame
    trame-vuetify
    trame-vtk
    trame-vtklocal # VTK Local rendering using WASM
    trame-rca >= 0.6.0 # VTK remote rendering
    itk
    pytest
    pytest-asyncio<0.24
    pre-commit
    black
    codespell
    lxml
    pydicom
    webcolors
    pillow
    pillow-avif-plugin
    # vtk
    # pandas
    # numpy
    # altair
    # mpld3
    # plotly
    # pydeck

[options.entry_points]
console_scripts =
    slicer_trame = slicer_trame.app:main
jupyter_serverproxy_servers =
    slicer_trame = slicer_trame.app.jupyter:jupyter_proxy_info
[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
