[metadata]
name = trame_slicer
version = 0.0.1
description = trame-slicer library
long_description = file: README.md
long_description_content_type = text/markdown
author = Kitware SAS
license = Apache Software License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework
    Medical
    3DSlicer

[options]
packages = find:
include_package_data = True
install_requires =
    trame
    trame-client >= 3.5.2
    trame-vuetify
    trame-vtk
    trame-rca >= 2.0.1
    itk
    lxml
    pydicom
    webcolors
    pillow
    pillow-avif-plugin

[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
